Fix render_process_id and render_frame_id being specified with webRequest for navigations.

Bug: 838406
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_mojo
Change-Id: I19a1e40a87bad542c99e3c0abe83559dff9a4199
Reviewed-on: https://chromium-review.googlesource.com/1042807
Reviewed-by: Karan Bhatia <karandeepb@chromium.org>
Commit-Queue: John Abd-El-Malek <jam@chromium.org>
Cr-Commit-Position: refs/heads/master@{#556044}
Former-commit-id: 639c214c00188808bbe82546ff4aacc96fc39776